css/delivery_request_seeker/delivery_request_seeker.css
.form-destination div input {
    width: 100%;
    padding: 1rem;
    border: none;
    box-sizing: border-box;
    border-radius: var(--border-radius);
    margin-bottom: .5rem;
}

.form-destination .form-destination-search {
    margin: 0 1rem;
}

.form-destination-search:nth-child(1) {
    border-bottom: 1px solid #c4c4c4;
}

.form-destination>div {
    margin-top: 1rem;
    background-color: white;
    border: 1px solid var(--color-contrast-light);
    border-radius: var(--border-radius);
    overflow: hidden;
    padding: .2rem;
}


/* ========== Button ========== */
.submit {
    /* margin-top: 1rem; */
    border-radius: var(--border-radius);
    font-weight: bold;
    padding: 1rem;
    background-color: var(--color-contrast-dark);
    border: none;
    color: white;
    width: 100%;
}

.button-confirmation {
    /* position: fixed; */
    bottom: 0;
    left: 0;
    padding: 2rem;
    background-color: white;
    border-top: 1px solid #c4c4c4;
}



/* ============== Courier Option ================= */

.courier-icon img {
    width: 100px;
}


input[type="radio"] {
    display: none;
}

label img {
    max-height: 100px;
}

label.courier-label {
    position: relative;
    color: var(--color-contrast-dark);
    cursor: pointer;
    display: inline-flex;
    align-items: center;
    gap: 1rem;
    border: 1px solid var(--color-contrast-light);
    padding: .5em;
    border-radius: var(--border-radius);
    width: 100%;
    padding: 1rem;
}


input[type="radio"]:checked+label {
    box-shadow: 0px 0px 0px 2px var(--color-contrast-dark);
}


.courier-info {
    padding: 1rem;
    display: flex;
    flex-flow: column;
    gap: .25rem;
}

.courier-details {
    display: flex;
    flex-flow: column nowrap;
    gap: .25rem;
}


/* ============= DropOff and Date ============== */

label h4 {
    display: block;
    margin-bottom: .5rem; 
}


input.datetime {
    border: 1px solid var(--color-contrast-dark);
    border-radius: 8px;
    padding: .5rem;
}

.drop-off-box {
    padding: .5rem;
    border-radius: 8px;
}




/* ========================== */

input:focus {
    border-color: var(--color-primary);
}


textarea {
    padding: 1rem;
}

